force-app/main/default/objects/redwing__Training_Plan_Section_Item__c/redwing__Training_Plan_Section_Item__c.object-meta.xml
<CustomObject>
    <label>Learning Plan Section Item</label>
    <nameField>
        <displayFormat>LPSI-{0000000}</displayFormat>
        <label>Learning Plan Section Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Section Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>