force-app/main/default/objects/redwing__Training_Plan_Section_Item__c/fields/redwing__Duration__c.field-meta.xml
<CustomField>
    <fullName>redwing__Duration__c</fullName>
    <formula>redwing__Learning__r.redwing__Duration__c</formula>
    <label>Duration (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>