force-app/main/default/objects/redwing__Training_Plan_Section_Item__c/fields/redwing__Duration_hours__c.field-meta.xml
<CustomField>
    <fullName>redwing__Duration_hours__c</fullName>
    <formula>redwing__Learning__r.redwing__Duration_hours__c</formula>
    <label>Duration (hours)</label>
    <type>Text</type>
</CustomField>