force-app/main/default/objects/redwing__Training_Plan_Section_Item__c/fields/redwing__Learning__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Only published learning objects can be added or edited in a Learning Plan.</errorMessage>
        <filterItems>
            <field>redwing__Learning__c.redwing__Is_Published_Formula__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.redwing__Removed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>NOTE: Only published learning objects can be associated to a Learning Plan</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>Learning Plan Section Items</relationshipLabel>
    <relationshipName>Training_Plan_Section_Items</relationshipName>
    <type>Lookup</type>
</CustomField>