force-app/main/default/objects/redwing__Training_Plan_Section_Item__c/fields/redwing__Optional__c.field-meta.xml
<CustomField>
    <fullName>redwing__Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>