force-app/main/default/objects/redwing__Training_Plan_Section_Item__c/fields/redwing__Training_Plan_Section__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Plan_Section__c</fullName>
    <label>Learning Plan Section</label>
    <referenceTo>redwing__Training_Plan_Section__c</referenceTo>
    <relationshipLabel>Learning Plan Section Items</relationshipLabel>
    <relationshipName>Training_Plan_Section_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>