force-app/main/default/objects/redwing__Training_Plan_Section_Item__c/validationRules/redwing__Learning_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>redwing__Learning_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(redwing__Learning__c)</errorConditionFormula>
    <errorMessage>Please select a Learning Object</errorMessage>
</ValidationRule>